refactor(java): modernize with JDK features and fix chinese encoding